--- a/public/recipebook/apple.html
+++ b/public/recipebook/apple.html
@@ -17,20 +17,7 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/apple.png" alt="Печеные яблоки">
             </div>
-            <div class="rating card_stars">
-                <h2>
-                    Оцените рецепт
-                </h2>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <h3 id="output">
-                    Ваша оценка: 0/5
-                </h3>
-            </div>
-            <div class="recipe__container-block">
+            <div class="recipe__container-block autoBlur">
                 <div class="recipe__timing">
                     <p>8 запеченных яблок</p>
                     <p>Подготовка: 5 минут</p>
@@ -51,11 +38,45 @@
                 </div>
             </div>
         </div>
-        <div class="recipe__info"> Запекать яблоки по этому рецепту — задача не из легких. Грецкие орехи и сухофрукты создают контраст нежной, пропитанной ароматом кленового сиропа фруктовой мякоти, а пряности придают яблочкам пикантность.
+        <div class="rating card_stars autoShow">
+            <h2>
+                Оцените рецепт
+            </h2>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <h3 id="output">
+                Ваша оценка: 0/5
+            </h3>
         </div>
-        <div class="recipe__text"> Разогрейте духовку до 170 °C. У яблок удалите сердцевину, вырезав ее сверху и оставив мякоть снизу не прорезанной примерно на 2,5 см. Соедините сушеную вишню или клюкву, коричневый сахар, орехи и пряности и начините полученной смесью яблоки. Уложите яблоки в форму для выпекания, накройте фольгой и запекайте 40 минут. Затем снимите фольгу, полейте яблоки выделившимся соком и запекайте еще 25 минут. Тем временем прогрейте яблочный сок, кленовый сироп и сливочное масло на среднем огне, чтобы смесь приобрела консистенцию нежного соуса. Полейте готовые яблоки соусом и подавайте гостям угощение, не забыв к нему вилку и нож.
+        <div class="recipe__info autoShow"> Запекать яблоки по этому рецепту — задача не из легких. Грецкие орехи и сухофрукты создают контраст нежной, пропитанной ароматом кленового сиропа фруктовой мякоти, а пряности придают яблочкам пикантность.
+        </div>
+        <div class="poison-box">
+            <figure>
+                <p class="autoShow"><span style="color: #ffecb3;">Оленна Тирелл</span> рекомендует:</p>
+                <img
+                    src="../images/icons8-зелье-64.png"
+                    alt=""
+                    class="autoRotatePoison"
+                />
+            </figure>
+            <div class="grand autoBlur">
+                <img class="grand__img" src="../images/tirell.png" alt="Оленна Тирелл">
+            </div>
+        </div>
+        <div class="recipe__text autoShow"> Разогрейте духовку до 170 °C. У яблок удалите сердцевину, вырезав ее сверху и оставив мякоть снизу не прорезанной примерно на 2,5 см. Соедините сушеную вишню или клюкву, коричневый сахар, орехи и пряности и начините полученной смесью яблоки. Уложите яблоки в форму для выпекания, накройте фольгой и запекайте 40 минут. Затем снимите фольгу, полейте яблоки выделившимся соком и запекайте еще 25 минут. Тем временем прогрейте яблочный сок, кленовый сироп и сливочное масло на среднем огне, чтобы смесь приобрела консистенцию нежного соуса. Полейте готовые яблоки соусом и подавайте гостям угощение, не забыв к нему вилку и нож.
         </div>
     </section>
+    <!-- разделитель -->
+    <div class="divider divider_margin">
+        <img
+            src="../images/dragon-divider_antique.png"
+            alt="разделитель в виде дракона"
+        />
+    </div>
+        <!-- разделитель конец-->
     <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
