--- a/public/recipebook/chiken.html
+++ b/public/recipebook/chiken.html
@@ -17,20 +17,7 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/chiken.png" alt="Курица в меду">
             </div>
-            <div class="rating card_stars">
-                <h2>
-                    Оцените рецепт
-                </h2>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <h3 id="output">
-                    Ваша оценка: 0/5
-                </h3>
-            </div>
-            <div class="recipe__container-block">
+            <div class="recipe__container-block autoBlur">
                 <div class="recipe__timing">
                     <p>3 - 4 порции</p>
                     <p>Подготовка: 20 минут</p>
@@ -41,7 +28,20 @@
                 </div>
             </div>
         </div>
-        <div class="recipe__ingredients">
+        <div class="rating card_stars autoShow">
+            <h2>
+                Оцените рецепт
+            </h2>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <h3 id="output">
+                Ваша оценка: 0/5
+            </h3>
+        </div>
+        <div class="recipe__ingredients autoShow">
             <ul>
                 <li>1 курица для запекания весом примерно 2,7 кг</li>
                 <li>2 ст. л. сливочного масла, растопленного</li>
@@ -55,12 +55,33 @@
                 <li>1 ст. л. сливочного масла, холодного</li>
             </ul>
         </div>
-        <div class="recipe__text"> 
+        <div class="poison-box">
+            <figure>
+                <p class="autoShow"><span style="color: #ffecb3;">Оленна Тирелл</span> рекомендует:</p>
+                <img
+                    src="../images/icons8-зелье-64.png"
+                    alt=""
+                    class="autoRotatePoison"
+                />
+            </figure>
+            <div class="grand autoBlur">
+                <img class="grand__img" src="../images/tirell.png" alt="Оленна Тирелл">
+            </div>
+        </div>
+        <div class="recipe__text autoShow"> 
             Разогрейте духовку до 230 °C. Курицу обсушите, затем натрите растопленным маслом и посыпьте солью. От этого при запекании у  нее образуется вкусная хрустящая корочка. Поставьте курицу в духовку примерно на час или пока из мясистой части при прокалывании кончиком ножа не выделится прозрачный сок.Пока жарится курица, соедините остальные ингредиенты в  кастрюле и  прогревайте соус до тех пор, пока сухофрукты не разбухнут, а объем жидкости не уварится
             вдвое, — примерно 30 минут. Курицу выньте из духовки и обмажьте соусом, оставив
             половину, чтобы подать отдельно.
         </div>
     </section>
+    <!-- разделитель -->
+    <div class="divider divider_margin">
+        <img
+            src="../images/dragon-divider_antique.png"
+            alt="разделитель в виде дракона"
+        />
+    </div>
+    <!-- разделитель конец-->
     <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
