--- a/public/recipebook/pear.html
+++ b/public/recipebook/pear.html
@@ -14,7 +14,7 @@
             <p class="recipe__quotation-name">«БИТВА КОРОЛЕЙ»</p>
         </div>
         <div class="recipe__container">
-            <div class="recipe__container-block">
+            <div class="recipe__container-block autoBlur">
                 <div class="recipe__timing">
                     <p>6 порций</p>
                     <p>Подготовка: 10 минут</p>
@@ -40,21 +40,34 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/pear2.png" alt="Пряные груши в вине">
             </div>
-            <div class="rating card_stars">
-                <h2>
-                    Оцените рецепт
-                </h2>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <h3 id="output">
-                    Ваша оценка: 0/5
-                </h3>
+        </div>
+        <div class="rating card_stars autoShow">
+            <h2>
+                Оцените рецепт
+            </h2>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <h3 id="output">
+                Ваша оценка: 0/5
+            </h3>
+        </div>
+        <div class="poison-box">
+            <figure>
+                <p class="autoShow"><span style="color: #ffecb3;">Оленна Тирелл</span> рекомендует:</p>
+                <img
+                    src="../images/icons8-зелье-64.png"
+                    alt=""
+                    class="autoRotatePoison"
+                />
+            </figure>
+            <div class="grand autoBlur">
+                <img class="grand__img" src="../images/tirell.png" alt="Оленна Тирелл">
             </div>
         </div>
-        <div class="recipe__text">
+        <div class="recipe__text autoShow">
             С апельсинов при помощи ножа для чистки овощей снимите цедру, выжмите из мякоти сок. В центр кастрюли насыпьте сахар  — в  достаточном объеме, чтобы он закрывал
             груши. С краев подлейте мед и 2/3 стакана воды. Прогрейте на слабом огне, пока сахар
             не разойдется, аккуратно помешивая деревянной ложкой. Перестаньте размешивать,
@@ -65,6 +78,14 @@
             или полив небольшим количеством сливок.
         </div>
     </section>
+     <!-- разделитель -->
+     <div class="divider divider_margin">
+        <img
+            src="../images/dragon-divider_antique.png"
+            alt="разделитель в виде дракона"
+        />
+    </div>
+    <!-- разделитель конец-->
     <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
