--- a/public/recipebook/soup.html
+++ b/public/recipebook/soup.html
@@ -17,20 +17,7 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/soup.png" alt="Суп из лука-порея">
             </div>
-            <div class="rating card_stars">
-                <h2>
-                    Оцените рецепт
-                </h2>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <span class="rating-star">&#9733;</span>
-                <h3 id="output">
-                    Ваша оценка: 0/5
-                </h3>
-            </div>
-            <div class="recipe__container-block">
+            <div class="recipe__container-block autoBlur">
                 <div class="recipe__timing">
                     <p>4 порции</p>
                     <p>Подготовка: 5 минут</p>
@@ -49,11 +36,45 @@
                 </div>
             </div>
         </div>
-        <div class="recipe__info"> С добавлением картофеля в этот относительно современный рецепт текстура супа изменяется — получается скорее суп-пюре, где как нельзя лучше раскрывается вкус порея. Густая и сытная похлебка — идеальная еда для холодной погоды.
+        <div class="rating card_stars autoShow">
+            <h2>
+                Оцените рецепт
+            </h2>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <span class="rating-star">&#9733;</span>
+            <h3 id="output">
+                Ваша оценка: 0/5
+            </h3>
         </div>
-        <div class="recipe__text"> Разогрейте 2 столовые ложки масла в кастрюле с толстым дном на среднем огне. Обжаривайте в нем порей и лук, помешивая, примерно 5 минут или до мягкости овощей. Добавьте картофель и жарьте еще 2–3 минуты, затем влейте бульон. Доведите до кипения, затем уменьшите огонь и варите при слабом кипении 35 минут. С помощью толкушки для картофеля или погружного блендера превратите суп в пюре почти однородной консистенции. Добавьте оставшееся сливочное масло. Приправьте солью и перцем, оформите зеленью и подавайте на стол.
+        <div class="recipe__info autoShow"> С добавлением картофеля в этот относительно современный рецепт текстура супа изменяется — получается скорее суп-пюре, где как нельзя лучше раскрывается вкус порея. Густая и сытная похлебка — идеальная еда для холодной погоды.
+        </div>
+        <div class="poison-box">
+            <figure>
+                <p class="autoShow"><span style="color: #ffecb3;">Оленна Тирелл</span> рекомендует:</p>
+                <img
+                    src="../images/icons8-зелье-64.png"
+                    alt=""
+                    class="autoRotatePoison"
+                />
+            </figure>
+            <div class="grand autoBlur">
+                <img class="grand__img" src="../images/tirell.png" alt="Оленна Тирелл">
+            </div>
+        </div>
+        <div class="recipe__text autoShow"> Разогрейте 2 столовые ложки масла в кастрюле с толстым дном на среднем огне. Обжаривайте в нем порей и лук, помешивая, примерно 5 минут или до мягкости овощей. Добавьте картофель и жарьте еще 2–3 минуты, затем влейте бульон. Доведите до кипения, затем уменьшите огонь и варите при слабом кипении 35 минут. С помощью толкушки для картофеля или погружного блендера превратите суп в пюре почти однородной консистенции. Добавьте оставшееся сливочное масло. Приправьте солью и перцем, оформите зеленью и подавайте на стол.
         </div>
     </section>
+     <!-- разделитель -->
+     <div class="divider divider_margin">
+        <img
+            src="../images/dragon-divider_antique.png"
+            alt="разделитель в виде дракона"
+        />
+    </div>
+    <!-- разделитель конец-->
     <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
