--- a/public/main.html
+++ b/public/main.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/forms.css">
     <title>Персонажи Игры престолов</title>
+    <link
+    rel="shortcut icon"
+    href="./images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 
 <body>
@@ -203,8 +208,10 @@
                     <img class="box__photo" src="./images/recipes/pie.webp" alt="Пирог с голубиным мясом" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Пирог с голубиным мясом</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/pie.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Пирог с голубиным мясом
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/pie.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -212,8 +219,10 @@
                     <img class="box__photo" src="./images/recipes/pear.png" alt="Пряные груши в вине " />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Пряные груши в вине</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/pear.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Пряные груши в вине
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/pear.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -224,7 +233,7 @@
                     <h3 class="content__title">
                         Дикий бык, запеченный с пореем
                     </h3>
-                    <a class="content__link" target="_blank" href="./recipebook/bull.html">Подробнее...</a>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/bull.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -232,8 +241,10 @@
                     <img class="box__photo" src="./images/recipes/apple.png" alt="Печеные яблоки" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Печеные яблоки</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/apple.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Печеные яблоки
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/apple.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -241,8 +252,10 @@
                     <img class="box__photo" src="./images/recipes/cake.png" alt="Лимонные пирожные" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Лимонные пирожные</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/cake.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Лимонные пирожные
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/cake.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -251,7 +264,7 @@
                 </div>
                 <div class="recipe-box__content content">
                     <h3 class="content__title">Курица в меду</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/chiken.html">Подробнее...</a>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/chiken.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -259,8 +272,10 @@
                     <img class="box__photo" src="./images/recipes/wildboar.png" alt="Запеченное мясо кабана" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Запеченное мясо кабана</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/wildboar.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Запеченное мясо кабана
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/wildboar.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -268,8 +283,10 @@
                     <img class="box__photo" src="./images/recipes/soup.png" alt="Суп из лука-порея" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Суп из лука-порея</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/soup.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Суп из лука-порея
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/soup.html">Подробнее...</a>
                 </div>
             </div>
             <div class="recipe-box">
@@ -277,8 +294,10 @@
                     <img class="box__photo" src="./images/recipes/wine.jpg" alt="Сангрия Джоффри" />
                 </div>
                 <div class="recipe-box__content content">
-                    <h3 class="content__title">Сангрия Джоффри</h3>
-                    <a class="content__link" target="_blank" href="./recipebook/wine.html">Подробнее...</a>
+                    <h3 class="content__title">
+                        Сангрия Джоффри
+                    </h3>
+                    <a class="content__link" target="_blank" rel="noopener noreferrer" href="./recipebook/wine.html">Подробнее...</a>
                 </div>
             </div>
         </section>
