--- a/public/quiz.html
+++ b/public/quiz.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Викторина</title>
     <link rel="stylesheet" href="./styles/quiz.css">
+    <link
+    rel="shortcut icon"
+    href="./images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 
 <body>
