--- a/public/recipebook/apple.html
+++ b/public/recipebook/apple.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Печеные яблоки</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link
+    rel="shortcut icon"
+    href="../images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 <body>
     <header class="header">
@@ -43,6 +48,11 @@
         </div>
     </header>
     <main>
+        <div class="container-back back">
+            <a type="button" class="back_btn" href="../main.html#section-recipe">
+                <img class="back-arrow" src="../images/icons8-back-24.png" alt="Стрелка назад">
+            </a>
+        </div>
     <h1 class="title title_font">Печеные яблоки</h1>
     <section class="recipe">
         <div class="recipe__quotation">
