--- a/public/recipebook/cake.html
+++ b/public/recipebook/cake.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лимонные пирожные</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link
+    rel="shortcut icon"
+    href="../images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 <body>
     <header class="header">
@@ -43,7 +48,12 @@
         </div>
     </header>
     <main>
-    <h2 class="title title_font">Лимонные пирожные</h2>
+        <div class="container-back back">
+            <a type="button" class="back_btn" href="../main.html#section-recipe">
+                <img class="back-arrow" src="../images/icons8-back-24.png" alt="Стрелка назад">
+            </a>
+        </div>
+    <h1 class="title title_font">Лимонные пирожные</h1>
     <section class="recipe">
         <div class="recipe__quotation">
             <p>Далее принесли телячьи зобные железы и пирог с голубиным мясом, печеные яблоки с корицей и лимонные пирожные в сахарной глазури, но Санса к этому времени уже наелась досыта и смогла управиться только с двумя лимонными пирожными — больше бы не влезло, как бы она ни любила их.</p>
