--- a/public/recipebook/pie.html
+++ b/public/recipebook/pie.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Пирог с голубиным мясом</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link
+    rel="shortcut icon"
+    href="../images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 <body>
     <header class="header">
@@ -43,7 +48,12 @@
         </div>
     </header>
     <main>
-    <h2 class="title title_font">Пирог с голубиным мясом</h2>
+        <div class="container-back back">
+            <a type="button" class="back_btn" href="../main.html#section-recipe">
+                <img class="back-arrow" src="../images/icons8-back-24.png" alt="Стрелка назад">
+            </a>
+        </div>
+    <h1 class="title title_font">Пирог с голубиным мясом</h1>
     <section class="recipe">
         <div class="recipe__quotation">
             <p>«Дядя не притронулся к пирогу с голубями». Джофф в одной руке держал свадебную чашу, а  другой вцепился в  пирог Тириона. «Не вкусить пирога — дурная примета».</p>
