--- a/public/recipebook/wildboar.html
+++ b/public/recipebook/wildboar.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Запеченное мясо кабана</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link
+    rel="shortcut icon"
+    href="../images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 <body>
     <header class="header">
@@ -43,7 +48,12 @@
         </div>
     </header>
     <main>
-    <h2 class="title title_font">Запеченное мясо кабана</h2>
+        <div class="container-back back">
+            <a type="button" class="back_btn" href="../main.html#section-recipe">
+                <img class="back-arrow" src="../images/icons8-back-24.png" alt="Стрелка назад">
+            </a>
+        </div>
+    <h1 class="title title_font">Запеченное мясо кабана</h1>
     <section class="recipe">
         <div class="recipe__quotation">
             <p>«Санса, — вмешалась леди Алерия, — вы, должно быть, проголодались. Не желаете ли разделить со мной трапезу и отведать мяса кабана и лимонных кексов?»</p>
