--- a/public/recipebook/wine.html
+++ b/public/recipebook/wine.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сангрия Джоффри</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link
+    rel="shortcut icon"
+    href="../images/icons8-game-of-thrones-128.png"
+    type="image/png"
+  />
 </head>
 <body>
     <header class="header">
@@ -43,7 +48,12 @@
         </div>
     </header>
     <main>
-    <h2 class="title title_font">Сангрия Джоффри</h2>
+        <div class="container-back back">
+            <a type="button" class="back_btn" href="../main.html#section-recipe">
+                <img class="back-arrow" src="../images/icons8-back-24.png" alt="Стрелка назад">
+            </a>
+        </div>
+    <h1 class="title title_font">Сангрия Джоффри</h1>
     <section class="recipe">
         <div class="recipe__quotation">
             <p>— У меня нет больше вина, — заявил Джоффри. — Как же мне выпить тост без вина? Услужи мне, дядя Бес. Раз уж ты не хочешь выступить на турнире, побудь моим чашником.</p>
