--- a/public/recipebook/wine.html
+++ b/public/recipebook/wine.html
@@ -28,16 +28,16 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a class="header__list-item_link" href="#search-form">Поиск персонажей</a>
+                        <a class="header__list-item_link" href="../main.html#search-form">Поиск персонажей</a>
                     </li>
                     <li class="header__list-item">
-                        <a class="header__list-item_link" href="./quiz.html">Квиз</a>
+                        <a class="header__list-item_link" href="../quiz.html">Квиз</a>
                     </li>
                     <li class="header__list-item">
-                        <a class="header__list-item_link" href="#section-recipe">Рецепты</a>
+                        <a class="header__list-item_link" href="../main.html#section-recipe">Рецепты</a>
                     </li>
                     <li class="header__list-item">
-                        <a class="header__list-item_link" href="#section-gallery">Галерея</a>
+                        <a class="header__list-item_link" href="../main.html#section-gallery">Галерея</a>
                     </li>
                 </ul>
             </nav>
