--- a/public/main.html
+++ b/public/main.html
@@ -48,7 +48,10 @@
                     </li>
                 </ul>
             </nav>
-
+            <button type="button" id="soundButton" class="off">
+                <img src="./images/trumpet.png">
+            </button>
+            <audio id="sound" src="./sound/pray.mp3"></audio>
             <div class="header__button-container">
                 <button class="header__button" id="enter" type="button">Войти</button>
             </div>
