--- a/public/main.html
+++ b/public/main.html
@@ -38,7 +38,7 @@
                         <a class="header__list-item_link" href="#search-form">Поиск персонажей</a>
                     </li>
                     <li class="header__list-item">
-                        <a class="header__list-item_link" href="./quiz.html">Квиз</a>
+                        <a class="header__list-item_link" href="./quiz.html" target="_blank">Квиз</a>
                     </li>
                     <li class="header__list-item">
                         <a class="header__list-item_link" href="#section-recipe">Рецепты</a>
@@ -491,7 +491,41 @@
         </section>
         <!-- КАРТА И ЦИТАТЫ КОНЕЦ -->
     </main>
-    <footer></footer>
+    <footer>
+        <img src="./images/emblem_gold.webp" alt="" class="logo infiniteRotateSlow">
+        <nav class="footer__nav">
+            <ul>
+                <li><a class="nav-link" href="#search-form">Поиск персонажей</a></li>
+                <li><a class="nav-link" href="./quiz.html" target="_blank">Квиз</a></li>
+                <li><a class="nav-link" href="#section-recipe">Рецепты</a></li>
+                <li><a class="nav-link" href="#section-gallery">Галерея</a></li>             
+            </ul>
+        </nav>
+        <nav class="footer__extra">
+            <ul class="extra__links">
+                <li class="extra__wrapper">
+                    <span class="tooltip_top">Fandom Wiki</span>
+                    <a
+                        href="https://gameofthrones.fandom.com/ru/wiki/%D0%98%D0%B3%D1%80%D0%B0_%D0%9F%D1%80%D0%B5%D1%81%D1%82%D0%BE%D0%BB%D0%BE%D0%B2_%D0%92%D0%B8%D0%BA%D0%B8" target="_blank" rel="noopener noreferrer"><img
+                            class="extra-link extra-one" src="images/stark.png" alt=""></a></li>
+                <li class="extra__wrapper">
+                    <span class="tooltip_top">HBO GoT</span>
+                    <a
+                        href="https://www.hbo.com/game-of-thrones" target="_blank" rel="noopener noreferrer"><img
+                            class="extra-link extra-two" src="images/targaryen.png" alt=""></a></li>
+                <li class="extra__wrapper">
+                    <span class="tooltip_bottom">Отзывы</span>
+                    <a
+                        href="https://www.ivi.tv/watch/igra-prestolov-amedia/comments" target="_blank" rel="noopener noreferrer"><img
+                            class="extra-link extra-three" src="images/greyjoy.png" alt=""></a></li>
+                <li class="extra__wrapper">
+                    <span class="tooltip_bottom">Краткое содержание</span>
+                    <a
+                        href="https://www.mirf.ru/serial/syuzhet-igry-prestolov/" target="_blank" rel="noopener noreferrer"><img
+                            class="extra-link extra-four" src="images/lannister.png" alt=""></a></li>
+            </ul>
+        </nav>
+    </footer>
 
     <script src="./scripts/forms-script.js"></script>
     <script src="scripts/script.js"></script>
