--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cutscreen GoT</title>
         <link rel="stylesheet" href="./styles/cutscene.css" />
+        <link
+            rel="shortcut icon"
+            href="./images/icons8-game-of-thrones-128.png"
+            type="image/png"
+        />
     </head>
     <body>
         <div class="scene">
