у карты удалена рамка

--- a/public/main.html
+++ b/public/main.html
@@ -189,6 +189,7 @@
         <input id="myInput" type="text" name="characterName" placeholder="Имя персонажа" />
       </div>
       <button type="button" id="search">Искать</button>
+      <button type="button" id="random">Случайная душа</button>
       <div id="loading">
         <figure>
           <img src="./images/targaryen-logo_antique.png" alt="" class="infiniteRotate" />
