--- a/public/main.html
+++ b/public/main.html
@@ -900,7 +900,10 @@
 
             <!-- КАРТА И ЦИТАТЫ -->
             <section id="map-quote-section">
-                <div id="map-container"></div>
+                <div id="map-container">
+                <!-- <iframe src="https://hotd-interactive-map.micro.hbo.com/" width="100%" height="400" id="hotd_iframe" scrolling="no"
+                allow="fullscreen" ></iframe> -->
+                </div>
                 <div id="quote-container"></div>
             </section>
             <!-- КАРТА И ЦИТАТЫ КОНЕЦ -->
@@ -934,7 +937,7 @@
             <nav class="footer__extra">
                 <ul class="extra__links">
                     <li class="extra__wrapper">
-                        <span class="tooltip_top">Fandom Wiki</span>
+                        <span class="tooltip">Fandom Wiki</span>
                         <a
                             href="https://gameofthrones.fandom.com/ru/wiki/%D0%98%D0%B3%D1%80%D0%B0_%D0%9F%D1%80%D0%B5%D1%81%D1%82%D0%BE%D0%BB%D0%BE%D0%B2_%D0%92%D0%B8%D0%BA%D0%B8"
                             target="_blank"
@@ -946,7 +949,7 @@
                         /></a>
                     </li>
                     <li class="extra__wrapper">
-                        <span class="tooltip_top">HBO GoT</span>
+                        <span class="tooltip">HBO GoT</span>
                         <a
                             href="https://www.hbo.com/game-of-thrones"
                             target="_blank"
@@ -958,7 +961,7 @@
                         /></a>
                     </li>
                     <li class="extra__wrapper">
-                        <span class="tooltip_bottom">Отзывы</span>
+                        <span class="tooltip">Отзывы</span>
                         <a
                             href="https://www.ivi.tv/watch/igra-prestolov-amedia/comments"
                             target="_blank"
@@ -970,7 +973,7 @@
                         /></a>
                     </li>
                     <li class="extra__wrapper">
-                        <span class="tooltip_bottom">Краткое содержание</span>
+                        <span class="tooltip">Краткое содержание</span>
                         <a
                             href="https://www.mirf.ru/serial/syuzhet-igry-prestolov/"
                             target="_blank"
