--- a/public/main.html
+++ b/public/main.html
@@ -901,8 +901,7 @@
             <!-- КАРТА И ЦИТАТЫ -->
             <section id="map-quote-section">
                 <div id="map-container">
-                <!-- <iframe src="https://hotd-interactive-map.micro.hbo.com/" width="100%" height="400" id="hotd_iframe" scrolling="no"
-                allow="fullscreen" ></iframe> -->
+                    <img id="map" src="./images/map-known-world.webp" alt="map">
                 </div>
                 <div id="quote-container"></div>
             </section>
