added footer in recipes

--- a/public/recipebook/pie.html
+++ b/public/recipebook/pie.html
@@ -41,10 +41,6 @@
                     </li>
                 </ul>
             </nav>
-
-            <div class="header__button-container">
-                <button class="header__button" id="enter">Войти</button>
-            </div>
         </div>
     </header>
     <main>
@@ -140,6 +136,85 @@
         />
     </div>
         <!-- разделитель конец-->
+        <footer>
+            <img
+                src="../images/emblem_gold.webp"
+                alt=""
+                class="logo infiniteRotateSlow"
+            />
+            <nav class="footer__nav">
+                <ul>
+                    <li>
+                        <a class="nav-link" href="../main.html#search-form"
+                            >Поиск персонажей</a
+                        >
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../quiz.html" target="_blank"
+                            >Квиз</a
+                        >
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../main.html#section-recipes">Рецепты</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="../main.html#section-gallery">Галерея</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="footer__extra">
+                <ul class="extra__links">
+                    <li class="extra__wrapper">
+                        <span class="tooltip">Fandom Wiki</span>
+                        <a
+                            href="https://gameofthrones.fandom.com/ru/wiki/%D0%98%D0%B3%D1%80%D0%B0_%D0%9F%D1%80%D0%B5%D1%81%D1%82%D0%BE%D0%BB%D0%BE%D0%B2_%D0%92%D0%B8%D0%BA%D0%B8"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            ><img
+                                class="extra-link extra-one"
+                                src="../images/stark.png"
+                                alt=""
+                        /></a>
+                    </li>
+                    <li class="extra__wrapper">
+                        <span class="tooltip">HBO GoT</span>
+                        <a
+                            href="https://www.hbo.com/game-of-thrones"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            ><img
+                                class="extra-link extra-two"
+                                src="../images/targaryen.png"
+                                alt=""
+                        /></a>
+                    </li>
+                    <li class="extra__wrapper">
+                        <span class="tooltip">Отзывы</span>
+                        <a
+                            href="https://www.ivi.tv/watch/igra-prestolov-amedia/comments"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            ><img
+                                class="extra-link extra-three"
+                                src="../images/greyjoy.png"
+                                alt=""
+                        /></a>
+                    </li>
+                    <li class="extra__wrapper">
+                        <span class="tooltip">Краткое содержание</span>
+                        <a
+                            href="https://www.mirf.ru/serial/syuzhet-igry-prestolov/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            ><img
+                                class="extra-link extra-four"
+                                src="../images/lannister.png"
+                                alt=""
+                        /></a>
+                    </li>
+                </ul>
+            </nav>
+        </footer>
     </main>
     <script src="../scripts/recipescript.js"></script>
 </body>
