добавила обновленный футер в квиз сжала картинки

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -111,7 +111,7 @@
     <nav class="footer__extra">
         <ul class="extra__links">
         <li class="extra__wrapper">
-            <span class="tooltip_top">Fandom Wiki</span>
+            <span class="tooltip">Fandom Wiki</span>
             <a
             href="https://gameofthrones.fandom.com/ru/wiki/%D0%98%D0%B3%D1%80%D0%B0_%D0%9F%D1%80%D0%B5%D1%81%D1%82%D0%BE%D0%BB%D0%BE%D0%B2_%D0%92%D0%B8%D0%BA%D0%B8"
             target="_blank"
@@ -120,7 +120,7 @@
             /></a>
         </li>
         <li class="extra__wrapper">
-            <span class="tooltip_top">HBO GoT</span>
+            <span class="tooltip">HBO GoT</span>
             <a
             href="https://www.hbo.com/game-of-thrones"
             target="_blank"
@@ -132,7 +132,7 @@
             /></a>
         </li>
         <li class="extra__wrapper">
-            <span class="tooltip_bottom">Отзывы</span>
+            <span class="tooltip">Отзывы</span>
             <a
             href="https://www.ivi.tv/watch/igra-prestolov-amedia/comments"
             target="_blank"
@@ -144,7 +144,7 @@
             /></a>
         </li>
         <li class="extra__wrapper">
-            <span class="tooltip_bottom">Краткое содержание</span>
+            <span class="tooltip">Краткое содержание</span>
             <a
             href="https://www.mirf.ru/serial/syuzhet-igry-prestolov/"
             target="_blank"
