index.htln changed

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cutscreen GoT</title>
-        <link rel="stylesheet" href="./styles/cutscene.css" />
+        <link rel="stylesheet" href="./public/styles/cutscene.css" />
         <link
             rel="shortcut icon"
-            href="./images/icons8-game-of-thrones-128.png"
+            href="./public/images/icons8-game-of-thrones-128.png"
             type="image/png"
         />
     </head>
@@ -15,11 +15,11 @@
         <div class="scene">
             <div
                 class="layer"
-                style="background-image: url(./images/cutscreen/last.jpg)"
+                style="background-image: url(./public/images/cutscreen/last.jpg)"
             ></div>
             <div
                 class="layer"
-                style="background-image: url(./images/cutscreen/middle.png)"
+                style="background-image: url(./public/images/cutscreen/middle.png)"
             >
                 <div class="layer__content">
                     <h1>Игра Престолов</h1>
@@ -27,11 +27,11 @@
             </div>
             <div
                 class="layer"
-                style="background-image: url(./images/cutscreen/2.png)"
+                style="background-image: url(./public/images/cutscreen/2.png)"
             ></div>
             <div
                 class="layer"
-                style="background-image: url(./images/cutscreen/1.png)"
+                style="background-image: url(./public/images/cutscreen/1.png)"
             ></div>
 
             <div class="layer">
@@ -42,7 +42,7 @@
 
             <div class="layer">
                 <div class="layer__link">
-                    <a href="./main.html">Нажми меня</a>
+                    <a href="./public/main.html">Нажми меня</a>
                 </div>
             </div>
         </div>
